$Id: CHANGES,v 1.98 2000/12/21 11:14:52 stelian Exp $

Changes between versions 0.4b20 and 0.4b21 (released ?????????????????)
=======================================================================

1.	Fixed some bugs in the dump -w|-W logic introduced by
	the previous version. Thanks to Andreas Dilger 
	<adilger@turbolinux.com> for his help on this one.

2.	Fixed again a compilation problem when using old e2fs
	headers (filesystem label related). Thanks to many users
	who reported this stupid error.

3.	Fixed a build problem on old lib5 based systems dealing with 
	_PATH_MNTTAB being undefined. Thanks to John Adams
	<johna@onevista.com> for reporting the bug.

4.	Improved the error detection in restore when creating
	the temporary files in TMPDIR. Now restore will corectly
	report a 'no space left on device' error instead of 
	strange errors which could imply an archive corruption.
	Thanks to Gabriel Somlo <somlo@cs.colostate.edu> and
	bgjenero <bgjenero@sympatico.ca> for reporting the bug.

5.	Added the throughput information in dump's progression
	messages.  Thanks to Andreas Dilger <adilger@turbolinux.com> 
	for the patch.

6.	Use libext2fs's inode scanning routines, which are particularly
	robust when dealing with errors (especially when having some
	bad blocks on the filesystem). Many thanks to Colin
	<colin@horizon.com> for reporting the bug, investigating
	the issues, finding a workaround, writing the patch and
	fully testing it... (of course, if this patch will break
	anything, he is to blame for :-)).

7.	Make dump and restore LFS aware. Dump can dump a filesystem
	containing large files, generate a large file on output and
	restore can restore them. This feature is not enabled by
	default, use --enable-largefile option of configure to enable
	it (you need to have a LFS aware glibc though). Thanks to
	Andrea Arcangeli <andrea@suse.de> for submitting the patch,
	and to Theodore T'so <tytso@valinux.com> for his always
	useful thoughts.
